[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build_meta_plus"
version = "0.1.0"
description = "A setuptools backend that supports pre- and post-build hooks via pyproject.toml"
authors = [{ name = "Ronny Rentner", email = "build_meta_plus.code@ronny-rentner.de" }]
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["setuptools", "build", "backend", "hooks", "pep517"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["setuptools>=61"]

[tool.setuptools]
py-modules = ["build_meta_plus"]

[tool.build_meta_plus]
post-build = ["rm -rf build_meta_plus.egg-info"]
