[build-system]
requires = ["setuptools>=61", "wheel", "build-meta-plus"]
build-backend = "build_meta_plus"

[project]
name = "build-meta-plus"
version = "0.1.2"
description = "A drop-in replacement for setuptools.build_meta that adds automated pre- and post-build hooks for cleanup and asset generation"
authors = [{ name = "Ronny Rentner", email = "build_meta_plus.code@ronny-rentner.de" }]
readme = "readme.md"
license = "Apache-2.0"
license-files = ["license.txt"]
requires-python = ">=3.9"
keywords = [
    "setuptools", "build_meta", "build-backend", "hooks", "pep517", "pep660", 
    "drop-in replacement", "automation", "cleanup", "pre-build", "post-build"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["setuptools>=61"]

[project.urls]
Homepage = "https://github.com/ronny-rentner/build-meta-plus"
Repository = "https://github.com/ronny-rentner/build-meta-plus.git"
Issues = "https://github.com/ronny-rentner/build-meta-plus/issues"

[tool.setuptools]
py-modules = ["build_meta_plus"]

[tool.build_meta_plus]
post-build = [
    "rm -rf build/",
    "rm -rf *.egg-info/"
]
