[build-system]
# In this test project, we omit 'build-meta-plus' from 'requires' 
# because we are testing the local source code.
# For a real project, you should use:
# requires = ["setuptools>=61", "wheel", "build-meta-plus"]
requires = ["setuptools>=61", "wheel"]
build-backend = "build_meta_plus"

[project]
name = "sample_project"
version = "0.1.0"
description = "A sample project for testing build_meta_plus hooks"

[tool.setuptools]
py-modules = ["dummy"]

[tool.build_meta_plus]
pre-build = ["touch pre_success.txt"]
post-build = ["touch post_success.txt"]
